--- a/pages/index.css
+++ b/pages/index.css
@@ -10,3 +10,4 @@
 @import url(../blocks/footer/__containers/footer__containers.css);
 @import url(../blocks/footer/__container/footer__container.css);
 @import url(../blocks/footer/__logo/footer__logo.css);
+@import url(../blocks/footer/__general-portners/footer__general-portners.css);
