--- a/blocks/footer/__fond-mp/footer__fond-mp.css
+++ b/blocks/footer/__fond-mp/footer__fond-mp.css
@@ -1,7 +1,6 @@
-.footer__logo {
+.footer__fond-mp {
   display: block;
-  width: 93px;
-  height: 80px;
+  width: 91px;
   object-fit: cover;
   object-position: center;
 }
