--- a/pages/index.css
+++ b/pages/index.css
@@ -14,3 +14,8 @@
 @import url(../blocks/footer/__fond-mp/footer__fond-mp.css);
 @import url(../blocks/footer/__mosbrew/footer__mosbrew.css);
 @import url(../blocks/footer/__sbtg/footer__sbtg.css);
+@import url(../blocks/footer/__content/footer__content.css);
+@import url(../blocks/footer/__location/footer__location.css);
+@import url(../blocks/footer/__location-title/footer__location-title.css);
+@import url(../blocks/footer/__location-address/footer__location-address.css);
+@import url(../blocks/footer/__nav-container/footer__nav-container.css);
