--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   max-width: 1440px;
   min-width: 320px;
-  background: #E5E5E5;
+  background: #ECEBE8;
   color: #242424;
   margin: 0 auto;
 }
