--- a/blocks/footer/__author-design/footer__author-design.css
+++ b/blocks/footer/__author-design/footer__author-design.css
@@ -1,4 +1,10 @@
 .footer__author-design {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
+  box-sizing: border-box;
+  margin: 0 40px 0 0;
+  /* padding-right: 40px; */
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 1.21;
 }
