--- a/pages/index.css
+++ b/pages/index.css
@@ -30,9 +30,7 @@
 @import url(../blocks/footer/__copyrights/footer__copyrights.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__privacy/footer__privacy.css);
-
 @import url(../blocks/footer/__authors/footer__authors.css);
-
+@import url(../blocks/footer/__author-logo/footer__author-logo.css);
 @import url(../blocks/footer/__author-design/footer__author-design.css);
-
 @import url(../blocks/footer/__author-master/footer__author-master.css);
